{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 19,
  "lineage": "c6dc0cde-295f-d424-d198-817ef44af254",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00750697f0b4e6940",
            "domain": "vpc",
            "id": "eipalloc-00750697f0b4e6940",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-218-131-60.compute-1.amazonaws.com",
            "public_ip": "44.218.131.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv-serv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-072eaa2e5bbe3417a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072eaa2e5bbe3417a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dca3def2173fd27",
            "private_dns": "ip-172-0-11-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.11.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfa64e5c12d5809c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b89927356509497",
            "tags": {
              "Name": "Priv-Serv"
            },
            "tags_all": {
              "Name": "Priv-Serv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca7076da2c98f63e"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.nat-sg",
            "aws_subnet.priv-sub",
            "aws_vpc.nat-vpc",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-serv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-018f0301fd20d713c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018f0301fd20d713c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07beda0bb9252c87d",
            "private_dns": "ip-172-0-10-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.10.19",
            "public_dns": "ec2-44-211-189-11.compute-1.amazonaws.com",
            "public_ip": "44.211.189.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bee7034fe61b716f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068dfdd67123a3dcc",
            "tags": {
              "Name": "Pub-Serv"
            },
            "tags_all": {
              "Name": "Pub-Serv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca7076da2c98f63e"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.nat-sg",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:internet-gateway/igw-065c8ede086c2be53",
            "id": "igw-065c8ede086c2be53",
            "owner_id": "975266691648",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0d90429e073eab68d"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00750697f0b4e6940",
            "association_id": "eipassoc-07e3a2989bf0d29cc",
            "connectivity_type": "public",
            "id": "nat-082a9b3a525a3ffb0",
            "network_interface_id": "eni-063a9493e2169402f",
            "private_ip": "172.0.10.109",
            "public_ip": "44.218.131.60",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068dfdd67123a3dcc",
            "tags": {
              "Name": "NAT-GW"
            },
            "tags_all": {
              "Name": "NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_subnet.pub-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-08b4c4b0a026c2c79",
            "id": "rtb-08b4c4b0a026c2c79",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082a9b3a525a3ffb0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat-priv-rt"
            },
            "tags_all": {
              "Name": "Nat-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d90429e073eab68d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-0053a9fa9924e4ad8",
            "id": "rtb-0053a9fa9924e4ad8",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065c8ede086c2be53",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat-pub-rt"
            },
            "tags_all": {
              "Name": "Nat-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d90429e073eab68d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6da92746dec9822",
            "route_table_id": "rtb-08b4c4b0a026c2c79",
            "subnet_id": "subnet-09b89927356509497"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_subnet.priv-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09048e205fd2b43c0",
            "route_table_id": "rtb-0053a9fa9924e4ad8",
            "subnet_id": "subnet-068dfdd67123a3dcc"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.nat-pub-rt",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:security-group/sg-0ca7076da2c98f63e",
            "description": "bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca7076da2c98f63e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nat-sg",
            "name_prefix": "",
            "owner_id": "975266691648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nat-SG"
            },
            "tags_all": {
              "Name": "Nat-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d90429e073eab68d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-09b89927356509497",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.11.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b89927356509497",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Demo"
            },
            "tags_all": {
              "Name": "Subnet-Demo"
            },
            "vpc_id": "vpc-0d90429e073eab68d"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-068dfdd67123a3dcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.10.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068dfdd67123a3dcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Demo"
            },
            "tags_all": {
              "Name": "Subnet-Demo"
            },
            "vpc_id": "vpc-0d90429e073eab68d"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nat-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:vpc/vpc-0d90429e073eab68d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-02ff38baf3b84934d",
            "default_route_table_id": "rtb-02fe1e0fcffa43659",
            "default_security_group_id": "sg-02ca1af909dfcf013",
            "dhcp_options_id": "dopt-00b696a765a7e9c3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d90429e073eab68d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fe1e0fcffa43659",
            "owner_id": "975266691648",
            "tags": {
              "Name": "VPC-Demo"
            },
            "tags_all": {
              "Name": "VPC-Demo"
            }
          }
        }
      ]
    }
  ]
}